@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Gnome2-Print
-version:      0.91
+version:      0.92
 version_from: Print.pm
 installdirs:  site
 requires:
