@@ -1,3 +1,8 @@
+2004/05/29 01:38 (+0100) ebassi
+	
+	* Print.pm, README: new release: 0.92.
+	* Makefile.PL: update required version for Glib and Gtk to >= 1.04.
+
 2004/05/27 17:22 (+0100) ebassi
 	
 	* Makefile.PL: remove dependency on Gnome2 and Gnome2::VFS modules.
